# libgit2

./: .gitignore  CMakeExtra.txt  CMakeLists.txt  README.rst  qtpackage.toml  update.sh
src/git2/: common.h
src/private/win32/: posix_w32_windows.c
